fix break on small screen

--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -30,6 +30,7 @@ footer#main-footer {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      gap: 8px;
     }
   }
 
@@ -947,7 +948,8 @@ header#main-header {
     grid-template-areas:
       'free-text ssl-text'
       'cards cards';
-    row-gap: 12px;
+    row-gap: 8px;
+    padding: 8px;
   }
 
   .perks-free-shipping {
